# OS

./: README.md  debug.bat  init_project.bat  metadata.json  server.ts
my_os/: Cargo.toml  build.rs  display.cpp  start.bat
my_os/.cargo/: config.toml
my_os/apps/: CONSOLE.cpp  FILEMANAGER.cpp  SETTINGS.cpp  app.ld  build_app.bat  build_apps.bat  display.cpp  display.h  libos.h  link.ld  manager.c  manager.tmp
my_os/esp/: NvVars
my_os/esp/EFI/BOOT/: BOOTX64.EFI
my_os/src/: main.rs
rust/: Cargo.toml  kernel.rs  x86_64-ntfs_os.json
rust/src/: allocator.rs  interrupts.rs  main.rs  memory.rs  serial.rs  task.rs
src/: App.tsx  types.ts
src/components/: Desktop.tsx
