[package]
name = "my_os"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
uefi = { version = "0.24.0", features = ["alloc"] }
uefi-services = { version = "0.21.0", features = ["qemu"] } # "qemu" hilft beim Logging

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
cc = "1.0"
