[package]
name = "ntfs-os-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.2.19"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.7.0"
pic8259 = "0.10.2"

[package.metadata.bootloader]
map-physical-memory = true
map-page-table-recursive = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
