[package]
name = "ntfs-os-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = { version = "0.14.10", default-features = false }
uart_16550 = "0.2.19"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.7.0"
pic8259 = "0.10.2"
# In rust/Cargo.toml ändern:
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["use_spin"] }

[package.metadata.bootloader]
map-physical-memory = true
map-page-table-recursive = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
